# ic

./: .bazelrc  .bazelversion  .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .gitlab-ci.yml  .mergify.yaml  .pre-commit-config.yaml  .rclone-anon.conf  .rclone.conf  .sort-derives.toml  BAZEL_TARGETS  BUILD.bazel  CONTRIBUTING.md  Capsule.toml  Cargo.toml  EMBEDDERS_COMPILATION.min  EMBEDDERS_COMPILATION.zh1-spm34@ce9a4d98831.min  EMBEDDERS_HEAP.dm1-dll46@11dbf43402.min  EMBEDDERS_HEAP.dm1-dll46@1f2c0237b7.min  EMBEDDERS_HEAP.dm1-dll46@7a9b6121e2.min  EMBEDDERS_HEAP.dm1-dll46@8a59a4dac7.min  EMBEDDERS_HEAP.min  HACKING.md  LICENSE  MODULE.bazel  PULL_REQUEST_BAZEL_TARGETS  README.adoc  ROSETTA_PERFORMANCE_OPTIMIZATIONS.md  SECURITY.adoc  SECURITY.md  STANDARDS_AND_CONVENTIONS.md  WORKSPACE.bazel  bazel-timestamp.txt  boom_dao.proposal_277.json  buf.yaml  build.sh  check-determinism.sh  (+63 more)
bazel/: BUILD.bazel  README.md  artifacts.bzl  askama.patch  aws-lc-sys.patch  bazel_clean.sh  bin_test.bzl  buildifier.bzl  buildifier_test.bash.template  buildifier_test.py  canbench.bzl  canbench.sh  candid.bzl  canisters.bzl  cargo.config  cc_rs.patch  check_endpoints_test.sh  compare_covered_tests.sh  copy_crate_versions.sh  cranelift-assembler-lib.patch  cranelift-assembler-main.patch  cranelift-codegen-meta-isle.patch  cranelift-codegen-meta.patch  cranelift-isle-build.patch  cranelift-isle-codegen.patch  cranelift-isle.patch  cranelift-srcgen-lib.patch  defs.bzl  dfx.bzl  e2fsprogs.patch  e2fsprogs_no_external_config.patch  execution_log_compact_to_csv.py  external_crates.bzl  external_crates_test.sh  find_missing_bazel_tests.sh  fixtures.bzl  focal.lock.json  focal.yaml  fuzz_testing.bzl  gazelle_test.sh  (+61 more)
bazel/candid/: BUILD.bazel  candid-check.sh  defs.bzl
bazel/candid_integration_tests/: BUILD.bazel  candid_integration_tests.py  example_backup.did
bazel/conf/: .bazelrc.build  .bazelrc.internal  README.md
bazel/exporter/: BUILD.bazel  main.go
bazel/inject_version_into_wasm_tests/: BUILD.bazel  inspect_stamped_trivial_wasm.py
bazel/manifests/: defs.bzl
bazel/openssl_static_env/: defs.bzl
bazel/pre-commit/: BUILD.bazel  DFINITY-capitalization.sh  buf.sh  do-not-merge.sh  ormolu-format.sh  ormolu-lint.sh  ruff-format.sh  shellcheck.bzl  shellcheck.sh  shfmt-format.sh  shfmt-lint.sh
bazel/proto/: BUILD.bazel  README.md  build_event_stream.proto  command_line.proto  failure_details.proto  invocation_policy.proto  option_filters.proto
bazel/sanitizers_enabled_env/: defs.bzl
bazel/test_parity/: compare_covered_tests.py  compare_covered_tests.sh  compare_covered_tests_test.py  ignored.tests
bazel/tests/: BUILD.bazel
bazel/tlaplus/: BUILD.bazel  defs.bzl
ci/githubstats/: BUILD.bazel  BUILD.buildbuddy-proto.bazel  README.md  last.sql  query.py  query_help_test.sh  test_runs.sql  top.sql  top_tests.sql
cpp/: BUILD.bazel  Makefile
cpp/infogetty-cpp/: infogetty.cc  network_info.cc
cpp/prestorecon-cpp/: prestorecon.cc
daniel/: Cargo.toml  no_upgrade_args.did
daniel/src/: main.rs
experimental/encoding_bench/: Cargo.toml  README.adoc  build.rs  ingress.capnp
experimental/json5test/: Cargo.toml
experimental/load_sink/: Cargo.toml  README.md
experimental/qos/: Cargo.toml
experimental/reuseport/: Cargo.toml  README.adoc
gitlab-ci/: BUILD.bazel  ci  shell.nix
gitlab-ci/config/: 00--benchmark-test-child-pipeline.yml  00--child-pipeline-noop-root.yml  00--child-pipeline-prod-generic-test.yml  00--child-pipeline-root-protected.yml  00--child-pipeline-root-unprotected.yml  00--child-pipeline-root.yml  00--common--images.yml  00--common--rules.yml  00--common.yml  00--prod-test-child-pipeline.yml  00--prod-test-hotfix-child-pipeline.yml  10--init--github-integration.yml  100--finalize--notify.yml  20--build-boundary-node-service-worker.yml  20--build-nix-shell.yml  20--test--after-script.yml  20--test--bazel-fuzzers.yml  20--test--bazel-pipeline.yml  20--test--build-ic.yml  (+71 more)
ic-os/: BUILD.bazel  README-rootfs.adoc  README.adoc  README.md  alternative_guestos.bzl  base_os.bzl  defs.bzl  file_size_test.sh  test.sh  vuln-scan.sh
pre-commit/: BUILD.bazel  DFINITY-capitalization-check.sh  DFINITY-capitalization.sh  buf-breaking-check.sh  buf-breaking.sh  buf-check-incompabilities.sh  buf-check.sh  buf-fix.sh  buf.bzl  buf.sh  buildifier_test.sh  candid-backwards.sh  candid.bzl  check-incompatibilities.sh  check-unused-components.sh  did-check.sh  do-not-merge-check.sh  do-not-merge.sh  ormolu.bzl  protobuf-format-check.sh  protobuf-format.sh  ruff-check.sh  ruff-fix.sh  ruff-format.sh  ruff-lint.sh  ruff.bzl  shellcheck.bzl  shfmt-format.sh  shfmt-lint.sh  shfmt.sh
rs/: BUILD.bazel  Capsule.toml  Cargo.nix  Cargo.toml  README.adoc  ccov-crates.sh  check.nix  coverage.py  crate-environment.nix  default.nix  gitlab-ci-config.yml  ic-quick-deploy.nix  ignored-vulnerabilities.nix  mk-release.nix  overrides.nix  rust-toolchain.toml  rustfmt.toml  shell.nix  workspace.nix
scalability/: .gitignore  BUILD.bazel  Readme.md  add_benchmark.py  add_benchmark_input.txt  ansible.py  canister_ids.json  canisters.txt  cdweekly_results.py  checks.sh  dfx.json  elasticsearch.py  experiment.py  flamegraphs.py  generate_report.py  load_experiment.py  machine_failure.py  max-capacity-experiment-1-inc-payload.py  max-capacity-experiment-1.py  max-capacity-experiment-2.py  max-capacity-gossip-experiment.py  max_capacity_gossip.py  max_capacity_large_memory.py  max_capacity_large_payload.py  max_capacity_system_baseline.py  misc.py  mock.py  mock.sh  prometheus.py  report.py  requirements.in  requirements.txt  run-p8s.nix  run-p8s.sh  run_experiment_1.py  run_experiment_2.py  run_experiment_3.py  run_experiment_4.py  run_experiment_gossip.py  run_experiment_xnet.py  (+14 more)
testnet/: .gitignore  BUILD.bazel  README.md  ansible.cfg  default.nix  dfinity_owned.yml  disaster_recovery_shell.nix  host_inventory.py  ic-release-package.nix  icos_test.yml  icos_test_bnvm.yml  jiralert_install.yml  json.bzl  mainnet_revisions.json  shell.nix
tlaplus/: BUILD.bazel  defs.bzl
(+15577 files in other folders)
